# CPP_Practice_Learning

./: CMakeLists.txt  README.md  main.cpp
Notes_Practice/: comments_notes.cpp  favorite_number_notes.cpp  global_variables.cpp  initializing_variables.cpp  operators.cpp  size_of_operator.cpp
Simple_Programs/: favorite_number.cpp  favorite_number.h  favorite_number_calculator.cpp
