cmake_minimum_required(VERSION 3.14)
project(CPP_Practice_Learning)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Practice_Learning main.cpp Notes_Practice/operators.cpp Simple_Programs/favorite_number_calculator.cpp Notes_Practice/comments_notes.cpp Notes_Practice/initializing_variables.cpp Notes_Practice/global_variables.cpp Notes_Practice/size_of_operator.cpp)